--- a/views-app/index.html
+++ b/views-app/index.html
@@ -10,9 +10,9 @@
 	<script src="js/app.js"></script>
 	<script src="js/dataService.js"></script>
 </head>
-<body ng-app="CrudApp">
+<body ng-app="MyPortfolio" ng-controller="MainController">
 
-<p>{{ test }}</p>
+<h1>{{ test }}</h1>
 <section ng-view></section>
 
 </body>
