--- a/views-app/news.html
+++ b/views-app/news.html
@@ -1,19 +1,19 @@
-	<section id="form">
-		<h2>Create Post</h2>
-		<form>
-			<label>Post Title: <input type="text" name="title" ng-model="newPost.title"></label>
-			<label>Author: <input type="text" name="author" ng-model="newPost.author"></label>
-			<label>Publish Date: <input type="text" name="date" ng-model="newPost.date"></label>
-			<label>Content: <textarea type="text" name="content" ng-model="newPost.content"></textarea></label>
-			<button ng-click="addNewPost()">Publish</button>
-		</form>
-	</section>
-	<section id="entries">
-		<article ng-repeat="post in posts track by $index">
-			<h2>{{post.title}}</h2>
-			<p>{{post.author}}</p>
-			<p>{{post.date}}</p>
-			<p>{{post.content}}</p>
-			<button ng-click="removePost($index)">&times;</button>
-		</article>
-	</section>
+<section id="form">
+	<h2>Create Post</h2>
+	<form>
+		<label>Post Title: <input type="text" name="title" ng-model="newPost.title"></label>
+		<label>Author: <input type="text" name="author" ng-model="newPost.author"></label>
+		<label>Publish Date: <input type="date" name="date" ng-model="newPost.date"></label>
+		<label>Content: <textarea type="text" name="content" ng-model="newPost.content"></textarea></label>
+		<button ng-click="addNewPost()">Publish</button>
+	</form>
+</section>
+<section id="entries">
+	<article ng-repeat="post in posts track by $index">
+		<h2>{{post.title}}</h2>
+		<p>{{post.author}}</p>
+		<p>{{post.date}}</p>
+		<p>{{post.content}}</p>
+		<button ng-click="removePost($index)">&times;</button>
+	</article>
+</section>
