--- a/views-app/news.html
+++ b/views-app/news.html
@@ -12,7 +12,7 @@
 	<article ng-repeat="post in posts track by $index">
 		<h2>{{post.title}}</h2>
 		<p>{{post.author}}</p>
-		<p>{{post.date}}</p>
+		<p>{{post.date | date : "MM/dd/yyyy" }} </p>
 		<p>{{post.content}}</p>
 		<button ng-click="removePost($index)">&times;</button>
 	</article>
