--- a/views-app/projects.html
+++ b/views-app/projects.html
@@ -10,7 +10,7 @@
 <section id="entries">
 	<article ng-repeat="project in projects track by $index">
 		<h2>{{project.name}}</h2>
-		<p>{{project.date}}</p>
+		<p>{{project.date | date : "MM/dd/yyyy"}}</p>
 		<p>{{project.description}}</p>
 		<button ng-click="removeProject($index)">&times;</button>
 	</article>
