--- a/views-app/testimonials.html
+++ b/views-app/testimonials.html
@@ -1,3 +1,18 @@
-<p>{{test}}</p>
+<section id="form">
+	<h2>Add an {{ clientDescription }} Client </h2>
+	<form>
+		<label>Client Name: <input type="text" name="name" ng-model="newTestimonial.name"></label>
+		<label>Testimonial: <textarea type="text" name="testimonial" ng-model="newTestimonial.testimonial"></textarea></label>
+		<button ng-click="addNewTestimonial()">Add</button>
+	</form>
+</section>
+<section id="entries">
+	<article ng-repeat="testimonial in testimonials track by $index">
+		<h2>{{testimonial.name}}</h2>
+		<p>{{testimonial.testimonial}}</p>
+		<button ng-click="removeTestimonial($index)">&times;</button>
+	</article>
+</section>
 
-<p>Here is something dynamic:<br />{{ otherTest }}</p>
+
+<p>Here is something dynamic:<br />{{ clientDescription }}</p>
