--- a/views-app/testimonials.html
+++ b/views-app/testimonials.html
@@ -1,5 +1,5 @@
 <section id="form">
-	<h2>Add an {{ clientDescription }} Client </h2>
+	<h2>Add a {{ clientDescription }} Client </h2>
 	<form>
 		<label>Client Name: <input type="text" name="name" ng-model="newTestimonial.name"></label>
 		<label>Testimonial: <textarea type="text" name="quote" ng-model="newTestimonial.quote"></textarea></label>
