--- a/views-app/index.html
+++ b/views-app/index.html
@@ -17,7 +17,7 @@
 		<ul>
 			<li><a href="#/news">Latest News</a></li>
 			<li><a href="#/projects">Recent Project</a></li>
-			<li><a href="#/testimonials/great">Testimonials</a></li>
+			<li><a href="#/testimonials/Valuable">Testimonials</a></li>
 		</ul>
 	</nav>
 </header>
