--- a/views-app/news.html
+++ b/views-app/news.html
@@ -8,7 +8,7 @@
 		<button ng-click="addNewPost()">Publish</button>
 	</form>
 </section>
-<section id="entries">
+<section id="news">
 	<article ng-repeat="post in posts track by $index">
 		<h2>{{post.title}}</h2>
 		<p>{{post.author}}</p>
