--- a/views-app/index.html
+++ b/views-app/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CRUD App</title>
+	<title>My Portfolio</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,700,400italic,500,500italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
-	<script src="js/angular-route.min.js"></script>
-	<script src="js/app.js"></script>
-	<script src="js/dataService.js"></script>
 </head>
 <body ng-app="MyPortfolio" ng-controller="MainController">
 <header>
@@ -24,5 +21,9 @@
 
 <div ng-view></div>
 
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
+	<script src="js/angular-route.min.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/dataService.js"></script>
 </body>
 </html>
