--- a/views-app/index.html
+++ b/views-app/index.html
@@ -9,7 +9,7 @@
 </head>
 <body ng-app="MyPortfolio" ng-controller="MainController">
 <header>
-	<h1>{{ test }}</h1>
+	<h1>Andrew's Portfolio</h1>
 	<nav>
 		<ul>
 			<li><a href="#/news">Latest News</a></li>
