--- a/views-app/news.html
+++ b/views-app/news.html
@@ -4,7 +4,7 @@
 		<label>Post Title: <input type="text" name="title" ng-model="newPost.title"></label>
 		<label>Author: <input type="text" name="author" ng-model="newPost.author"></label>
 		<label>Publish Date: <input type="date" name="date" ng-model="newPost.date"></label>
-		<label>Content: <textarea type="text" name="content" ng-model="newPost.content"></textarea></label>
+		<label class="textbox">Content: <textarea type="text" name="content" ng-model="newPost.content"></textarea></label>
 		<button ng-click="addNewPost()">Publish</button>
 	</form>
 </section>
