--- a/views-app/testimonials.html
+++ b/views-app/testimonials.html
@@ -2,7 +2,7 @@
 	<h2>Add a {{ clientDescription }} Client </h2>
 	<form>
 		<label>Client Name: <input type="text" name="name" ng-model="newTestimonial.name"></label>
-		<label>Testimonial: <textarea type="text" name="quote" ng-model="newTestimonial.quote"></textarea></label>
+		<label class="textbox">Testimonial: <textarea type="text" name="quote" ng-model="newTestimonial.quote"></textarea></label>
 		<button ng-click="addNewTestimonial()">Add</button>
 	</form>
 </section>
