--- a/views-app/projects.html
+++ b/views-app/projects.html
@@ -3,7 +3,7 @@
 	<form>
 		<label>Project Name: <input type="text" name="name" ng-model="newProject.name"></label>
 		<label>Finish Date: <input type="date" name="date" ng-model="newProject.date"></label>
-		<label>Description: <textarea type="text" name="description" ng-model="newProject.description"></textarea></label>
+		<label class="textbox">Description: <textarea type="text" name="description" ng-model="newProject.description"></textarea></label>
 		<button ng-click="addNewProject()">Add</button>
 	</form>
 </section>
