--- a/views-app/news.html
+++ b/views-app/news.html
@@ -1,4 +1,4 @@
-<section id="form">
+<section id="news" class="form">
 	<h2>Create Post</h2>
 	<form>
 		<label>Post Title: <input type="text" name="title" ng-model="newPost.title"></label>
@@ -8,7 +8,7 @@
 		<button ng-click="addNewPost()">Publish</button>
 	</form>
 </section>
-<section id="news">
+<section class="content">
 	<article ng-repeat="post in posts track by $index">
 		<h3>{{post.title}}</h3>
 		<p>{{post.author}}</p>
