--- a/backbone/index.html
+++ b/backbone/index.html
@@ -10,5 +10,8 @@
 <script src="js/libs/jquery-1.11.3.min.js"></script>
 <script src="js/libs/underscore-min.js"></script>
 <script src="js/libs/backbone-min.js"></script>
+<script src="js/models/singlePersonModel.js"></script>
+<script src="js/collections/allPersons.js"></script>
+<script src="js/directoryApp.js"></script>
 </body>
 </html>
