--- a/backbone/index.html
+++ b/backbone/index.html
@@ -7,11 +7,25 @@
 </head>
 <body>
 
-<script src="js/libs/jquery-1.11.3.min.js"></script>
-<script src="js/libs/underscore-min.js"></script>
-<script src="js/libs/backbone-min.js"></script>
-<script src="js/models/singlePersonModel.js"></script>
-<script src="js/collections/allPersons.js"></script>
-<script src="js/directoryApp.js"></script>
+	<section id="allPersons"></section>
+
+	<section id="copy"></section>
+
+	<script type="text/template" id="person">
+		<a href="#<%= link %>"><img src="<%= image %>" alt="<%= name %>"></a>
+		<ul>
+			<li><strong>Name:</strong> <%= name %></li>
+			<li><strong>Age:</strong> <%= age %></li>
+			<li><strong>Gender:</strong> <%= gender %></li>
+			<li><strong>Website</strong> <a href="<%= website %>"><%= website %></a></li>
+		</ul>
+	</script>
+
+	<script src="js/libs/jquery-1.11.3.min.js"></script>
+	<script src="js/libs/underscore-min.js"></script>
+	<script src="js/libs/backbone-min.js"></script>
+	<script src="js/models/singlePersonModel.js"></script>
+	<script src="js/collections/allPersons.js"></script>
+	<script src="js/directoryApp.js"></script>
 </body>
 </html>
