--- a/backbone/index.html
+++ b/backbone/index.html
@@ -25,7 +25,10 @@
 	<script src="js/libs/underscore-min.js"></script>
 	<script src="js/libs/backbone-min.js"></script>
 	<script src="js/models/singlePersonModel.js"></script>
+	<script src="js/views/singlePersonView.js"></script>
+	<script src="js/views/allPersonsView.js"></script>
 	<script src="js/collections/allPersons.js"></script>
+	<script src="js/routes/route.js"></script>
 	<script src="js/directoryApp.js"></script>
 </body>
 </html>
